# alpacode

./: .gitignore  .gitmodules  README.md
AlpacGame/: CMakeLists.txt  State.h  StateExit.cpp  StateExit.h  StateMachine.cpp  StateMachine.h  StateMenu.h  app.cpp  app.h  config.h  main.cpp  main_menu.cpp  main_menu.h  planet.cpp  planet.h  sound.cpp  sound.h  square.cpp  square.h  window.cpp  window.h
AlpacGame/Resources/: Config.cpp  Config.h  ConfigGame.cpp  ConfigGame.h  ConfigMenu.cpp  ConfigMenu.h  ConfigSound.cpp  ConfigSound.h  ConfigWindow.cpp  ConfigWindow.h  DayCycle.cpp  DayCycle.h  MenuUI.txt  MenuUITheme.txt  SpriteInfo.h  highscore.txt
AlpacGame/entity/: AnimationInfo.h  CollisionListener.cpp  CollisionListener.h  DetectionSensor.h  Entity.h  EntityCold.h  EntityWarm.h  Holdable.h  Mob.h  Usable.h
AlpacGame/entity/Heart/: HeartBarometer.cpp  HeartBarometer.h
AlpacGame/entity/HitPoint/: HitPointBarometer.cpp  HitPointBarometer.h
AlpacGame/entity/alpaca/: alpaca.cpp  alpaca.h
AlpacGame/entity/cooldown/: CooldownBarometer.cpp  CooldownBarometer.h
AlpacGame/entity/planet/: planet.cpp  planet.h
AlpacGame/entity/player/: Farmer.cpp  Farmer.h
AlpacGame/entity/shotgun/: Bullet.cpp  Bullet.h  Shotgun.cpp  Shotgun.h
AlpacGame/entity/trap/: Trap.cpp  Trap.h
AlpacGame/entity/wolf/: Wolf.cpp  Wolf.h
AlpacGame/planet/: planet.cpp  planet.h
AlpacGame/scenery/: Scenery.h
AlpacGame/scenery/Cave/: Cave.cpp  Cave.h
AlpacGame/scenery/DayCycle/: DayCycle.cpp  DayCycle.h
AlpacGame/scenery/Sky/: Sky.cpp  Sky.h
AlpacGame/scenery/Stone/: Stone.cpp  Stone.h
AlpacGame/scenery/Sun/: Sun.cpp  Sun.h
AlpacGame/scenery/Trees/: TreeHigh.cpp  TreeHigh.h  TreeLow.cpp  TreeLow.h  TreeMedium.cpp  TreeMedium.h
AlpacGame/state/: StateExit.cpp  StateExit.h  StateGame.cpp  StateGame.h  StateInitial.cpp  StateInitial.h  StateMachine.cpp  StateMachine.h  StateMenu.cpp  StateMenu.h  StateOption.cpp  StateOption.h  StatePause.cpp  StatePause.h
AlpacGame/wolf/: Wolf.cpp  Wolf.h  WolfState.cpp  WolfState.h
sfml_square/: CMakeLists.txt  app.cpp  app.h  square.cpp  square.h
